--- a/pom.xml
+++ b/pom.xml
@@ -110,9 +110,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
                 <configuration>
-    <!--                <parallel>methods</parallel>
+                    <parallel>methods</parallel>
                     <threadCount>2</threadCount>
-                    <forkCount>2</forkCount>      -->
+                    <forkCount>2</forkCount>
                     <testFailureIgnore>false</testFailureIgnore>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
